--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "@radix-ui/react-toggle": "1.1.10",
         "@radix-ui/react-toggle-group": "1.1.11",
         "@radix-ui/react-tooltip": "1.2.8",
+        "@types/netlify-identity-widget": "^1.9.7",
         "class-variance-authority": "0.7.1",
         "clsx": "2.1.1",
         "cmdk": "1.1.1",
@@ -55,6 +56,7 @@
         "input-otp": "1.4.2",
         "lucide-react": "0.563.0",
         "motion": "12.29.2",
+        "netlify-identity-widget": "^1.9.2",
         "next-themes": "0.4.6",
         "react": "18.3.1",
         "react-day-picker": "8.10.1",
