--- a/package.json
+++ b/package.json
@@ -16,11 +16,7 @@
         "check:fix": "biome check --write ./src"
     },
     "dependencies": {
-        "@emotion/react": "11.14.0",
-        "@emotion/styled": "11.14.1",
-        "@mui/icons-material": "7.3.7",
-        "@mui/material": "7.3.7",
-        "@popperjs/core": "2.11.8",
+        "@clerk/clerk-react": "5.60.0",
         "@radix-ui/react-accordion": "1.2.12",
         "@radix-ui/react-alert-dialog": "1.1.15",
         "@radix-ui/react-aspect-ratio": "1.1.8",
@@ -47,7 +43,6 @@
         "@radix-ui/react-toggle": "1.1.10",
         "@radix-ui/react-toggle-group": "1.1.11",
         "@radix-ui/react-tooltip": "1.2.8",
-        "@types/netlify-identity-widget": "^1.9.7",
         "class-variance-authority": "0.7.1",
         "clsx": "2.1.1",
         "cmdk": "1.1.1",
@@ -56,7 +51,6 @@
         "input-otp": "1.4.2",
         "lucide-react": "0.563.0",
         "motion": "12.29.2",
-        "netlify-identity-widget": "^1.9.2",
         "next-themes": "0.4.6",
         "react": "18.3.1",
         "react-day-picker": "8.10.1",
@@ -64,7 +58,6 @@
         "react-dnd-html5-backend": "16.0.1",
         "react-dom": "18.3.1",
         "react-hook-form": "7.71.1",
-        "react-popper": "2.3.0",
         "react-resizable-panels": "2.1.7",
         "react-responsive-masonry": "2.7.1",
         "react-router": "^7.13.0",
